--- a/index.html
+++ b/index.html
@@ -3,19 +3,57 @@
 <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Bootstrap core CSS -->
+      <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
+      <!-- My CSS -->
       <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #1b263a;">
+<body>
       
-      <footer style="background-color: black;">
+      <header>
             <div class="container">
                   <div class="row">
-                   <div class="col-md-3"><img src="img/spotify.png" height="40" width="132" alt=""></div>
-                   <div class="col-md-7"></div>
-                   <div class="col-md-2"></div>
+                   <div class="col-md-3 div-header">
+                              <img src="assets/img/spotify.png" height="40" width="132" alt=""></div>
+
+                   <div class="col-md-9 padding-right-0">
+                        <nav class="navbar navbar-expand-md ">
+                              <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                                <ul class="navbar-nav">
+                                  <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Premium</a></li>
+
+                                  <li class="nav-item">
+                                    <a class="nav-link" href="#">Suporte</a></li>
+
+                                  <li class="nav-item">
+                                  <a class="nav-link" href="#">Baixar</a></li>
+                                  
+                                  <li class="nav-item">
+                                    <a class="nav-link font-weight-normal" href="#">|</a></li>
+
+                                  <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
+                                              <svg width="2.5em" height="2.5em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
+                                                    <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                                    <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+                                                  </svg>
+                                        <span class="text">Perfil</span>
+                                        </a>
+
+                                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                                      <li><a class="dropdown-item" href="#">Conta</a></li>
+                                      <li><a class="dropdown-item" href="#">Sair</a></li>
+                                    </ul>
+                                  </li>
+                                </ul>
+                              </div>
+                        </nav>
+                        </div>
                   </div>
             </div>
-      </footer>
+      </header>
 
       <div class="container">
             <div class="row">
@@ -30,7 +68,7 @@
 
       <footer style="background-color: black;">
             <div class="container">
-                  <div class="row" style="color: white;">
+                  <div class="row-footer" style="color: white;">
                         <div class="col-md-2">logo</div>
                         <div class="col-md-2">empresa</div>
                         <div class="col-md-2">comunidades</div>
@@ -38,5 +76,6 @@
                         <div class="col-md-4">redes sociais</div>
                   </div></div>
       </footer>
+      <script src="assets/dist/js/bootstrap.bundle.min.js" ></script>
 </body>
 </html>
