--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
       </header>
 
       <div class="container">
-            <div class="row">
-                  <div class="col-md-6" style="background-color:chartreuse;">promo</div>
-                  <div class="col-md-6" style="background-color: blueviolet;">img</div>
+            <!--banner-->
+            <div class="row banner">
+                  <div class="col-md-5 offset-md-1">
+                        <h1>Curta 3 meses de<br> Premium grátis</h1>
+                        <h6>Curta músicas sem anúncios, no modo offline e muito mais. Cancele quando quiser.</h6>
+                        <button class="btn btn-dark">GANHE 3 MESES GRÁTIS</button>
+                        <p class="text-left letras-miudas">
+                              Somente para o plano Individual. Depois, apenas R$ 16,90/mês. 
+                              Oferta indisponível para usuários que já experimentaram o Premium. 
+                              <a href="/legal/premium-promotional-offer-terms">Sujeita a Termos e Condições</a>. 
+                              A oferta termina em 31 de dez de 2020.</p>
+                  </div>
+                  <div class="col-md-5 imagem-promocional"></div>
             </div>
+            <!--Corpo-->
             <div class="row">
-                  <div class="col-md-3" style="background-color: #04070e; color: #fff;">menu</div>
+                  <div class="col-md-3" style="background-color: #d41111; color: #fff;">menu</div>
                   <div class="col-md-9" style="background-color: white;">Corpo</div>
             </div>
       </div>
