--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
       </header>
       <!--Conteudo-->
       <div class="container">
+
+
             <!--banner-->
             <div class="row banner">
                   <div class="col-md-5 offset-md-1">
                         <h1>Curta 3 meses de<br> Premium grátis</h1>
                         <h6>Curta músicas sem anúncios, no modo offline e muito mais. <br>Cancele quando quiser.</h6>
-                        <button class="btn btn-dark">GANHE 3 MESES GRÁTIS</button>
+                        <button class="btn btn-dark texto-uppercase">Ganhe 3 Meses Grátis</button>
                         <p class="text-left letras-miudas">
                               Somente para o plano Individual. Depois, apenas R$ 16,90/mês. 
                               Oferta indisponível para usuários que já experimentaram o Premium. 
@@ -72,8 +74,13 @@
                   </div>
                   <div class="col-md-5 imagem-promocional"></div>
             </div>
+
+
             <!--Corpo-->
             <div class="row">
+
+
+                  <!--Menu lateral-->
                   <div class="col-md-3 menu-lateral">
                         <div class="perfil-avatar ">
                               <a class="nav-link" href="#" role="avatar">
@@ -148,10 +155,78 @@
                         </ul>
                   </div>
 
+
                   <!--Conteudo do Site-->
-                  <div class="col-md-9" style="background-color: white;">Corpo</div>
+                  <div class="col-md-9  padding-left-32" style="background-color: white;">
+                        <h1 class="width-full padding-top-10 text-aligment-left">
+                              Visão geral da conta
+                        </h1>
+                        <h3 class="padding-top-10">Perfil</h3>
+                        <div class="row">
+                              <div class="col-md-6 border-bottom padding-16 color-9e">Nome do usuário</div>
+                              <div class="col-md-5 border-bottom padding-16">carlosifto</div>
+                        </div>
+                        <div class="row">
+                              <div class="col-md-6 border-bottom padding-16 color-9e">E-mail</div>
+                              <div class="col-md-5 border-bottom padding-16">carlosifto@gmail.com</div>
+                        </div>
+                        <div class="row">
+                              <div class="col-md-6 border-bottom padding-16 color-9e">Data de nascimento</div>
+                              <div class="col-md-5 border-bottom padding-16">1 de junho de 1900</div>
+                        </div>
+                        <div class="row">
+                              <div class="col-md-6 border-bottom padding-16 color-9e">País ou região</div>
+                              <div class="col-md-5 border-bottom padding-16">Brasil</div>
+                        </div>
+                        <div>
+                              <button class="btn btn-outline-dark texto-uppercase">Editar Perfil</button>
+                        </div>
+
+
+                        <!--Seu plano-->
+                        <h3 class="padding-top-10">Seu plano</h3>
+                        <div class="card">
+                              <div class="plano">
+                                          <div style=" margin: auto; border: green 1px solid;">
+                                          <span class="align-middle" style="border: red 1px solid;">
+                                                Spotify Free
+                                          </span> 
+                                    </div>
+                              </div>
+
+                              <div class="card-body">
+                                    <p class="card-text">
+                                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
+                                          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
+                                          enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                                nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <h3>Free</h3>
+                              </div>
+                        </div>
+                        <div>
+                              <button class="btn btn-outline-dark texto-uppercase">Mudar de Plano</button>
+                        </div>
+
+                        <h3 class="padding-top-10">Saia em qualquer lugar</h3>
+                        <p >Saia em tudo que o Spotify estiver aberto, inclusive na Web, 
+                              no celular, no desktop ou em qualquer outro dispositivo.</p>
+                              <div class="aviso">
+                                    Aviso: não será feito logout de dispositivos parceiros, 
+                                    como aparelhos da Sonos ou PlayStation. Para saber mais 
+                                    sobre como sair do Spotify (ou desvinculá-lo) em um 
+                                    dispositivo parceiro, confira o manual do fabricante do 
+                                    dispositivo.
+                              </div>
+                        <div>
+                              <button class="btn btn-outline-dark texto-uppercase">
+                                    Saia de Todos os Dispositívos</button>
+                        </div>
+                  </div>
             </div>
       </div>
+
+      <!--Rodapé-->
 
       <footer>
             <div class="container">
