adicao_de_foto_de_perfil_e_correcao_no_alinhamento_de_redes_sociais

--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
                               <!--SVG Perfil-->
                                   <li class="nav-item navbar-spotify dropdown">
                                         <a class="nav-link nav-link-header dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-                                              <svg width="2.5em" height="2.5em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-                                                    <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                                                    <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-                                                  </svg>
+                                              <img class="rounded-circle imagem-perfil-1" src="assets/img/perfil.jpg"/>
                                         <span class="margin-left-6">Perfil</span>
                                         </a>
 
@@ -93,12 +89,9 @@
                         <!--Perfil Avatar-->
                         <div class="perfil-avatar ">
                               <a class="nav-link" href="#" role="avatar">
-                              <svg width="82" height="82" viewBox="0 0 16 16" class="bi bi-person-circle icone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-                                    <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                                    <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-                                  </svg>
-                        </a></div>
+                                    <img class="rounded-circle imagem-perfil-2" src="assets/img/perfil.jpg"/>
+                              </a>
+                        </div>
                         <!--Lista de Itens do Menu Lateral-->
                         <ul class="list-group list-group-flush">
                           <li>
@@ -238,8 +231,8 @@
                         <h3 class="padding-top-10">Seu plano</h3>
                         <div class="border-bottom border-left border-right">
                               <div class="plano padding-left-32">
-                                    <div class="heght-37c"></div>
-                                    <div class="heght-37c">Spotify Free</div>
+                                    <div class="height-37-per"></div>
+                                    <div class="height-37-per">Spotify Free</div>
                               </div>
                         </div>
                         <div>
@@ -317,7 +310,7 @@
                         <div class="col-md-3 offset-md-1">                              
                         <nav class="navbar navbar-expand-md">
                               <div class="collapse navbar-collapse justify-content-center">
-                                    <ul class="navbar-nav width-full">
+                                    <ul class="navbar-nav width-70-per">
                                           <li class="nav-item-social">
                                                 <div class="div-icone">
                                                       <a href="" class="nav-link icone">
