--- a/editar-perfil.html
+++ b/editar-perfil.html
@@ -7,6 +7,7 @@
       <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
       <!-- My CSS -->
       <link rel="stylesheet" href="style.css">
+      <title>Editar Perfil</title>
 </head>
 <body>
       <!--Cabeçalho-->
@@ -26,7 +27,7 @@
                               <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                                 <ul class="navbar-nav">
                                   <li class="nav-item navbar-spotify">
-                                    <a class="nav-link nav-link-header"href="#">Premium</a></li>
+                                    <a class="nav-link nav-link-header" href="#">Premium</a></li>
 
                                   <li class="nav-item navbar-spotify">
                                     <a class="nav-link nav-link-header" href="#">Suporte</a></li>
@@ -41,7 +42,7 @@
                               <!--SVG Perfil-->
                                   <li class="nav-item navbar-spotify dropdown">
                                         <a class="nav-link nav-link-header dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
-                                              <img class="rounded-circle imagem-perfil-1" src="assets/img/perfil.jpg"/>
+                                              <img class="rounded-circle imagem-perfil-1" src="assets/img/perfil.jpg" alt="imagem-baloes"/>
                                         <span class="margin-left-6">Perfil</span>
                                         </a>
 
@@ -61,24 +62,7 @@
 
       <!--Conteudo-->
       <div class="container">
-
-
-            <!--banner-->
-            <div class="row banner">
-                  <div class="col-md-5 offset-md-1">
-                        <h1>Curta 3 meses de<br> Premium grátis</h1>
-                        <h6>Curta músicas sem anúncios, no modo offline e muito mais. <br>
-                              Cancele quando quiser.</h6>
-                        <button class="btn btn-dark texto-uppercase">Ganhe 3 Meses Grátis</button>
-                        <p class="text-left letras-miudas">
-                              Somente para o plano Individual. Depois, apenas R$ 16,90/mês. 
-                              Oferta indisponível para usuários que já experimentaram o Premium. 
-                              <a href="#">Sujeita a Termos e Condições</a>. 
-                              A oferta termina em 31 de dez de 2020.</p>
-                  </div>
-                  <div class="col-md-5 imagem-promocional"></div>
-            </div>
-
+            
 
             <!--Corpo-->
             <div class="row">
@@ -91,14 +75,14 @@
                         <!--Perfil Avatar-->
                         <div class="perfil-avatar ">
                               <a class="nav-link" href="#" role="avatar">
-                                    <img class="rounded-circle imagem-perfil-2" src="assets/img/perfil.jpg"/>
+                                    <img class="rounded-circle imagem-perfil-2" src="assets/img/perfil.jpg" alt="perfil-avatar"/>
                               </a>
                         </div>
 
 
                         <!--Lista de Itens do Menu Lateral-->
                         <ul class="list-group list-group-flush">
-                          <li>
+                              <li>
                               <a href="index.html" class="list-group-item">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door icon-nav" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z"/>
@@ -107,8 +91,9 @@
                                   <span>
                                     Visão geral da conta
                                   </span>
-                              </a></li>
-                          <li>
+                              </a>
+                          </li>
+                              <li>
                               <a href="#" class="list-group-item">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-credit-card-2-back icon-nav" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M14 3H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
@@ -116,9 +101,10 @@
                                         </svg>
                                         <span>
                                               Planos disponíveis
-                                          </span>
-                              </a></li>
-                        <li>
+                                        </span>
+                              </a>
+                          </li>
+                              <li>
                                 <a href="editar-perfil.html" class="list-group-item">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-fill icon-nav" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
@@ -201,66 +187,108 @@
                               </a>
                         </li>
                         </ul>
+                        <div class="pre-rodape"></div>
                   </div>
 
 
                   <!--Conteudo do Site-->
-                  <div class="col-md-9 corpo">
+                  <div class="col-md-9  padding-left-32 corpo">
                         <h1 class="width-full padding-top-10 text-aligment-left">
-                              Visão geral da conta
+                              Editar perfil
                         </h1>
-                        <h3 class="padding-top-10">Perfil</h3>
-                        <div class="row">
-                              <div class="col-md-6 border-bottom padding-16 color-9e">Nome do usuário</div>
-                              <div class="col-md-5 border-bottom padding-16">carlosifto</div>
-                        </div>
-                        <div class="row">
-                              <div class="col-md-6 border-bottom padding-16 color-9e">E-mail</div>
-                              <div class="col-md-5 border-bottom padding-16">carlosifto@gmail.com</div>
-                        </div>
-                        <div class="row">
-                              <div class="col-md-6 border-bottom padding-16 color-9e">Data de nascimento</div>
-                              <div class="col-md-5 border-bottom padding-16">1 de junho de 1900</div>
-                        </div>
-                        <div class="row">
-                              <div class="col-md-6 border-bottom padding-16 color-9e">País ou região</div>
-                              <div class="col-md-5 border-bottom padding-16">Brasil</div>
-                        </div>
-                        <div>
-                              <button class="btn btn-outline-success texto-uppercase">Editar Perfil</button>
-                        </div>
 
+                        <form style="margin-right: 20px; margin-top: 20px">
 
-                        <!--Seu plano-->
-                        <h3 class="padding-top-10">Seu plano</h3>
-                        <div class="border-bottom border-left border-right">
-                              <div class="plano padding-left-32">
-                                    <div class="height-37-per"></div>
-                                    <div class="height-37-per">Spotify Free</div>
+                              <!--Email-->
+                              <div class="mb-3">
+                                    <label for="emailLogin" class="form-label">E-mail</label>
+                                    <input id="emailLogin" class="form-control" type="email" value="carlosifto@gmail.com">
                               </div>
-                        </div>
-                        <div>
-                              <button class="btn btn-outline-dark texto-uppercase">Mudar de Plano</button>
-                        </div>
 
-                        <h3 class="padding-top-10">Saia em qualquer lugar</h3>
-                        <p >Saia em tudo que o Spotify estiver aberto, inclusive na Web, 
-                              no celular, no desktop ou em qualquer outro dispositivo.</p>
-                              <div class="aviso">
-                                    Aviso: não será feito logout de dispositivos parceiros, 
-                                    como aparelhos da Sonos ou PlayStation. Para saber mais 
-                                    sobre como sair do Spotify (ou desvinculá-lo) em um 
-                                    dispositivo parceiro, confira o manual do fabricante do 
-                                    dispositivo.
+
+                              <!--Senha-->
+                              <div class="mb-3">
+                                    <label for="Password" class="form-label">Senha</label>
+                                    <input id="Password" class="form-control" type="password" disabled>
                               </div>
-                        <div>
-                              <button class="btn btn-outline-dark texto-uppercase">
-                                    Saia de Todos os Dispositívos</button>
-                        </div>
-                        <div class="pre-rodape"></div>
+
+
+                              <!--Sexo-->
+                              <div class="mb-3">
+                                    <label for="sexo" class="form-label">Sexo</label>
+                                    <select id="sexo" class="form-select">
+                                          <option>Masculino</option>
+                                          <option>Femenino</option>
+                                    </select>
+                              </div>
+
+
+                              <!--Data Nascimento-->
+                              <div class="mb-1">
+
+                                    <label class="form-label">Data Nascimento</label>
+                              </div>
+                              <!--Campos DD MM YYYY-->
+                              <div class="row mb-2">
+                                    <div class="col-md-4">
+                                          <input required="" id="dia" pattern="((0?[1-9])|([12][0-9])|(3[01]))"
+                                                 class="form-control"
+                                                 value="1">
+                                    </div>
+                                    <div class="col-md-4">
+                                          <select id="mes" class="form-select">
+                                                <option value="january">Janeiro</option>
+                                                <option value="february">Fevereiro</option>
+                                                <option value="march">Março</option>
+                                                <option value="april">Abril</option>
+                                                <option value="may">Maio</option>
+                                                <option value="june" selected="">Junho</option>
+                                                <option value="july">Julho</option>
+                                                <option value="august">Agosto</option>
+                                                <option value="september">Setembro</option>
+                                                <option value="october">Outubro</option>
+                                                <option value="november">Novembro</option>
+                                                <option value="december">Dezembro</option>
+                                          </select>
+                                    </div>
+                                    <div class="col-md-4">
+                                          <input required="" id="ano" pattern="((19|20)[0-9]{2})"
+                                                                          class="form-control"
+                                                                          value="1993">
+                                    </div>
+                              </div>
+
+
+                              <!--Pais ou Região-->
+                              <div class="mb-5">
+                                    <label for="pais" class="form-label">País ou região</label>
+                                    <select id="pais" class="form-select" disabled>
+                                          <option>Brasil</option>
+                                          <option>outros</option>
+                                    </select>
+                                    <div class="form-text obs-form">Saiba mais sobre <a href="#">como mudar seu país ou região. </a></div>
+                              </div>
+
+
+                              <!--Cheque box Envio de Marketing-->
+                              <div class="mb-5 form-check fs-6 text">
+                                    <input type="checkbox" class="form-check-input" id="text-checkbox">
+                                    <label class="form-check-label" for="text-checkbox">
+                                          Compartilhar meus dados cadastrais com os provedores de conteúdo do Spotify para fins de marketing.
+                                    </label>
+                              </div>
+
+
+                              <!--Botões -->
+                              <div class="text-aligment-right border-top">
+                                    <button class="btn btn-outline-dark texto-uppercase border-0" type="reset">Cancelar</button>
+                                    <button class="btn texto-uppercase btn-estilo-principal" type="submit">Salvar Perfil</button>
+                              </div>
+                        </form>
                   </div>
             </div>
       </div>
+
 
       <!--Rodapé-->
       <footer>
