--- a/editar-perfil.html
+++ b/editar-perfil.html
@@ -165,10 +165,48 @@
                         </li>
                         <li>
                               <a href="#" class="list-group-item">
-                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-controller icon-nav" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                          <path fill-rule="evenodd" d="M11.119 2.693c.904.19 1.75.495 2.235.98.407.408.779 1.05 1.094 1.772.32.733.599 1.591.805 2.466.206.875.34 1.78.364 2.606.024.815-.059 1.602-.328 2.21a1.42 1.42 0 0 1-1.445.83c-.636-.067-1.115-.394-1.513-.773a11.307 11.307 0 0 1-.739-.809c-.126-.147-.25-.291-.368-.422-.728-.804-1.597-1.527-3.224-1.527-1.627 0-2.496.723-3.224 1.527-.119.131-.242.275-.368.422-.243.283-.494.576-.739.81-.398.378-.877.705-1.513.772a1.42 1.42 0 0 1-1.445-.83c-.27-.608-.352-1.395-.329-2.21.024-.826.16-1.73.365-2.606.206-.875.486-1.733.805-2.466.315-.722.687-1.364 1.094-1.772.486-.485 1.331-.79 2.235-.98.932-.196 2.03-.292 3.119-.292 1.089 0 2.187.096 3.119.292zm-6.032.979c-.877.185-1.469.443-1.733.708-.276.276-.587.783-.885 1.465a13.748 13.748 0 0 0-.748 2.295 12.351 12.351 0 0 0-.339 2.406c-.022.755.062 1.368.243 1.776a.42.42 0 0 0 .426.24c.327-.034.61-.199.929-.502.212-.202.4-.423.615-.674.133-.156.276-.323.44-.505C4.861 9.97 5.978 9.026 8 9.026s3.139.943 3.965 1.855c.164.182.307.35.44.505.214.25.403.472.615.674.318.303.601.468.929.503a.42.42 0 0 0 .426-.241c.18-.408.265-1.02.243-1.776a12.354 12.354 0 0 0-.339-2.406 13.753 13.753 0 0 0-.748-2.295c-.298-.682-.61-1.19-.885-1.465-.264-.265-.856-.523-1.733-.708-.85-.179-1.877-.27-2.913-.27-1.036 0-2.063.091-2.913.27z"/>
-                                          <path d="M11.5 6.026a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1 1a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1 1a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-7-2.5h1v3h-1v-3z"/>
-                                          <path d="M3.5 6.526h3v1h-3v-1zM3.051 3.26a.5.5 0 0 1 .354-.613l1.932-.518a.5.5 0 0 1 .258.966l-1.932.518a.5.5 0 0 1-.612-.354zm9.976 0a.5.5 0 0 0-.353-.613l-1.932-.518a.5.5 0 1 0-.259.966l1.932.518a.5.5 0 0 0 .612-.354z"/>
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         width="1em" height="1em" viewBox="0 0 329.742 329.741"
+                                         fill="currentColor"
+                                         class="icon-nav">
+                                          <g>
+                                                <path d="M243.288,175.448c8.521,0,16.555,3.291,22.644,9.277c3.525,3.477,8.803,4.485,13.367,2.576
+                                                  c4.575-1.922,7.554-6.39,7.554-11.349v-77.88c0-6.788-5.513-12.298-12.298-12.298h-60.612c5.026-8.56,7.83-18.471,7.83-28.874
+                                                  C221.772,25.523,196.251,0,164.871,0c-31.384,0-56.901,25.523-56.901,56.901c0,10.403,2.798,20.32,7.827,28.874H55.187
+                                                  c-6.789,0-12.298,5.51-12.298,12.298v219.37c0,6.792,5.509,12.298,12.298,12.298h219.367c6.785,0,12.298-5.506,12.298-12.298
+                                                  v-77.882c0-4.954-2.979-9.428-7.554-11.343c-4.576-1.922-9.842-0.901-13.367,2.57c-6.089,5.986-14.123,9.277-22.644,9.277
+                                                  c-17.805,0-32.306-14.49-32.306-32.307C210.982,189.938,225.483,175.448,243.288,175.448z"/>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
+                                          <g>
+                                          </g>
                                     </svg>
                                     <span>
                                           Aplicativos
@@ -280,7 +318,7 @@
 
 
                               <!--Botões -->
-                              <div class="text-aligment-right border-top">
+                              <div class="text-aligment-right border-top mt-4">
                                     <button class="btn btn-outline-dark texto-uppercase border-0" type="reset">Cancelar</button>
                                     <button class="btn texto-uppercase btn-estilo-principal" type="submit">Salvar Perfil</button>
                               </div>
